--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: vendor
-          key: ${{ github.repository }}-${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          key: composer-${{ github.repository }}-${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
-            ${{ github.repository }}-${{ runner.os }}-php-
+            composer-${{ github.repository }}-${{ runner.os }}-php-
 
       - name: Setup PHP
         uses: shivammathur/setup-php@master
