--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,9 @@ jobs:
     strategy:
       matrix:
         os:
-          - macos-latest-xlarge
+          - macos-latest
         include:
-          - os: macos-latest-xlarge
+          - os: macos-latest
             arch: arm64
             platform: macOS
 
