--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,9 @@ jobs:
     strategy:
       matrix:
         os: 
-          - macos-latest
+          - macos-latest-large
         include:
-          - os: macos-latest
+          - os: macos-latest-large
             arch: arm64
             platform: macOS
     runs-on: ${{ matrix.os }}
