Use self-hosted runner

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,10 @@ jobs:
           - macos-latest
         include:
           - os: macos-latest
+            runner: self-hosted
             arch: arm64
             platform: macOS
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v4
 
