--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "bosunski/dev",
+    "version": "0.0.1",
     "description": "Developer Environment Voyager",
     "keywords": ["framework", "laravel", "laravel zero", "console", "cli"],
     "homepage": "https://laravel-zero.com",
