--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,3 +16,4 @@ jobs:
         uses: google-github-actions/release-please-action@v4
         with:
           release-type: php
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
