--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "ext-session": "*",
         "ext-swoole": "*",
         "guzzlehttp/guzzle": "^7.5",
+        "hyperf/engine": "^2.11",
         "illuminate/http": "^10.0",
         "illuminate/view": "^10.0",
         "laravel-zero/framework": "^10.2.0",
