Implement deferrable steps

--- a/dev.yml
+++ b/dev.yml
@@ -14,6 +14,9 @@ steps:
         extensions:
           - swoole
           - ffi
+  - valet:
+      sites:
+        - dev
   - script:
       desc: Install composer dependencies
       run: composer install
