--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "console",
         "cli"
     ],
-    "homepage": "https://dev.egberinde.com",
+    "homepage": "https://dev.bosunegberinde.com",
     "type": "project",
     "license": "MIT",
     "support": {
