--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   release:
     types:
       - published
+      - prereleased
   workflow_dispatch:
 
 env:
@@ -24,6 +25,7 @@ jobs:
           - os: macos-latest
             arch: arm64
             platform: macOS
+            target: darwin-arm64
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -65,15 +67,17 @@ jobs:
           SPC_EXTENSIONS="bcmath,calendar,ctype,curl,dba,dom,exif,session,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole,session"
           SPC_EXTENSIONS_SHA256=$(echo -n $SPC_EXTENSIONS | shasum -a 256 | awk '{print $1}')
           PHP_VERSION=8.3
-          FILENAME=dev-${{ github.ref_name }}-${{ runner.os }}-${{ matrix.arch }}
+          FILENAME=dev-${{ matrix.target }}
 
-          echo "SPC_EXTENSIONS=$SPC_EXTENSIONS" >> $GITHUB_OUTPUT
-          echo "SPC_EXTENSIONS_SHA256=$SPC_EXTENSIONS_SHA256" >> $GITHUB_OUTPUT
-          echo "PHP_VERSION=$PHP_VERSION" >> $GITHUB_OUTPUT
-          echo "CACHE_KEY=spc-${{ runner.os }}-${{ matrix.arch}}-php-$PHP_VERSION-dependencies-$SPC_EXTENSIONS_SHA256" >> $GITHUB_OUTPUT
-          echo "FILENAME=$FILENAME" >> $GITHUB_OUTPUT
-          echo "FILEPATH=$GITHUB_WORKSPACE/dist/$FILENAME" >> $GITHUB_OUTPUT
-          echo "CHECKSUMS=$GITHUB_WORKSPACE/dist/CHECKSUMS" >> $GITHUB_OUTPUT
+          {
+            echo "SPC_EXTENSIONS=$SPC_EXTENSIONS"
+            echo "SPC_EXTENSIONS_SHA256=$SPC_EXTENSIONS_SHA256"
+            echo "PHP_VERSION=$PHP_VERSION"
+            echo "CACHE_KEY=spc-${{ runner.os }}-${{ matrix.arch}}-php-$PHP_VERSION-dependencies-$SPC_EXTENSIONS_SHA256"
+            echo "FILENAME=$FILENAME"
+            echo "FILEPATH=$GITHUB_WORKSPACE/dist/$FILENAME"
+            echo "CHECKSUMS=$GITHUB_WORKSPACE/dist/CHECKSUMS"
+          } >> $GITHUB_OUTPUT
 
       - name: Restore SPC builds from Cache
         id: cache-download
@@ -108,23 +112,28 @@ jobs:
       - name: Build PHAR
         run: php dev app:build dev.phar --build-version=${{ github.ref_name }}
 
-      - name: Build DEV binary for macOS
+      - name: Build DEV binary for ${{ matrix.target }}
         working-directory: spc
         run: |
             php -d memory_limit=-1 bin/spc micro:combine $GITHUB_WORKSPACE/builds/dev.phar -O ${{ steps.vars.outputs.FILEPATH }}
             chmod +x ${{ steps.vars.outputs.FILEPATH }}
 
-      - name: "Create Checksums"
+      - name: Zip Binary
+        working-directory: ${{ github.workspace }}/dist
         run: |
-          cd $GITHUB_WORKSPACE/dist
-          shasum -a 256 ${{ steps.vars.outputs.FILENAME }} > ${{ steps.vars.outputs.CHECKSUMS }}
+          zip -r ${{ steps.vars.outputs.FILENAME }}.zip ${{ steps.vars.outputs.FILENAME }}
+
+      - name: "Create Checksums"
+        working-directory: ${{ github.workspace }}/dist
+        run: |
+          shasum -a 256 ${{ steps.vars.outputs.FILENAME }}.zip > ${{ steps.vars.outputs.CHECKSUMS }}
 
       - name: Upload binaries to release
         uses: softprops/action-gh-release@v2
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         with:
           files: |
-            ${{ steps.vars.outputs.FILEPATH }}
+            ${{ steps.vars.outputs.FILEPATH }}.zip
             ${{ steps.vars.outputs.CHECKSUMS }}
             spc/buildroot/build-extensions.json
             spc/buildroot/build-libraries.json
