--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,3 +62,4 @@ jobs:
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
           make_latest: false
+          tag_name: unstable
