--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,6 @@ on:
   release:
     types:
       - published
-      - prereleased
   workflow_dispatch:
 
 env:
@@ -54,9 +53,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: vendor
-          key: composer-${{ github.repository }}-${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          key: release-composer-${{ github.repository }}-${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
-            composer-${{ github.repository }}-${{ runner.os }}-php-
+            release-composer-${{ github.repository }}-${{ runner.os }}-php-
 
       - if: steps.cache-composer-deps.outputs.cache-hit != 'true'
         run: composer install --no-dev --no-suggest
@@ -73,6 +72,7 @@ jobs:
             echo "SPC_EXTENSIONS=$SPC_EXTENSIONS"
             echo "SPC_EXTENSIONS_SHA256=$SPC_EXTENSIONS_SHA256"
             echo "PHP_VERSION=$PHP_VERSION"
+            echo "SPC_RESTORE_KEY=spc-${{ runner.os }}-${{ matrix.arch}}-php-$PHP_VERSION-dependencies-"
             echo "CACHE_KEY=spc-${{ runner.os }}-${{ matrix.arch}}-php-$PHP_VERSION-dependencies-$SPC_EXTENSIONS_SHA256"
             echo "FILENAME=$FILENAME"
             echo "FILEPATH=$GITHUB_WORKSPACE/dist/$FILENAME"
@@ -87,6 +87,8 @@ jobs:
             spc/downloads
             spc/buildroot
           key: ${{ steps.vars.outputs.CACHE_KEY }}
+          restore-keys: |
+            ${{ steps.vars.outputs.SPC_RESTORE_KEY }}
 
       - name: Setup SPC
         run: composer update --no-dev --classmap-authoritative
