--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,4 @@
-name: Upload DEV Binary (Release Artifacts)
-
+name: "Release: Build and Upload Binaries"
 on:
   release:
     types:
@@ -10,7 +9,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 concurrency:
-  group: release-build-${{ github.ref_name }}
+  group: release-build
   cancel-in-progress: true
 
 jobs:
@@ -21,6 +20,7 @@ jobs:
         os:
           - macos-latest
         include:
+          - php-version: 8.3
           - os: macos-latest
             arch: arm64
             platform: macOS
@@ -64,13 +64,11 @@ jobs:
       - name: Resolve Variables
         id: vars
         run: |
-          PHP_VERSION=8.3
           SPC_EXTENSIONS="bcmath,calendar,ctype,curl,dba,dom,exif,session,filter,fileinfo,iconv,mbstring,mbregex,openssl,pcntl,pdo,pdo_mysql,pdo_sqlite,phar,posix,readline,simplexml,sockets,sqlite3,tokenizer,xml,xmlreader,xmlwriter,zip,zlib,sodium,swoole,session"
-          CACHE_KEY=$(echo "${{ runner.os }}-${{ matrix.arch}}-php-$PHP_VERSION-dependencies-$SPC_EXTENSIONS" | shasum -a 256 | awk '{print $1}')
+          CACHE_KEY=$(echo "${{ runner.os }}-${{ matrix.arch}}-php-${{ matrix.php-version }}-dependencies-$SPC_EXTENSIONS" | shasum -a 256 | awk '{print $1}')
 
           {
             echo "SPC_EXTENSIONS=$SPC_EXTENSIONS"
-            echo "PHP_VERSION=$PHP_VERSION"
             echo "SPC_CACHE_KEY=spc-$CACHE_KEY"
             echo "FILEPATH=$GITHUB_WORKSPACE/dist/${{ matrix.filename }}"
             echo "CHECKSUMS=$GITHUB_WORKSPACE/dist/CHECKSUMS"
@@ -90,7 +88,7 @@ jobs:
         working-directory: spc
 
       - if: steps.spc-cache.outputs.cache-hit != 'true'
-        run: ./bin/spc download --with-php=${{ steps.vars.outputs.PHP_VERSION }} --for-extensions=${{ steps.vars.outputs.SPC_EXTENSIONS }} --debug
+        run: ./bin/spc download --with-php=${{ matrix.php-version }} --for-extensions=${{ steps.vars.outputs.SPC_EXTENSIONS }} --debug
         working-directory: spc
 
       - if: steps.spc-cache.outputs.cache-hit != 'true'
