Minor update workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,7 +142,7 @@ jobs:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
           make_latest: false
           tag_name: ${{ steps.calver.outputs.tag }}
-          name: "${{ steps.calver.outputs.tag }} Unstable"
+          name: ${{ steps.calver.outputs.tag }}
 
   release-please:
     name: Invoke Release Please
