--- a/dev.yml
+++ b/dev.yml
@@ -14,6 +14,9 @@ steps:
         extensions:
           - swoole
           - ffi
+        sources:
+          xz: https://github.com/tukaani-project/xz/releases/download/v5.6.2/xz-5.6.2.tar.gz
+          swoole: https://github.com/swoole/swoole-src/releases/download/v5.1.3/swoole-5.1.3.tgz
   - script:
       desc: Install composer dependencies
       run: composer install
