--- a/composer.json
+++ b/composer.json
@@ -23,18 +23,18 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "ext-pcntl": "*",
         "ext-posix": "*",
         "ext-session": "*",
         "guzzlehttp/guzzle": "^7.5",
         "hyperf/engine": "^2.11",
-        "illuminate/http": "^10.0",
-        "illuminate/view": "^10.0",
-        "laravel-zero/framework": "^10.2.0",
+        "illuminate/http": "^11.5",
+        "illuminate/view": "^11.5",
+        "laravel-zero/framework": "^11.0",
         "laravel-zero/phar-updater": "^1.3",
         "laravel/prompts": "^0.1.0",
-        "nunomaduro/termwind": "^1.15",
+        "nunomaduro/termwind": "^2.0",
         "symfony/yaml": "^6.3"
     },
     "require-dev": {
@@ -68,5 +68,10 @@
     "prefer-stable": true,
     "bin": [
         "dev"
-    ]
+    ],
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
+    }
 }
