--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "laravel",
         "laravel zero",
         "console",
-        "cli"
+        "cli",
+        "php"
     ],
     "homepage": "https://dev.bosunegberinde.com",
     "type": "project",
