--- a/dev.yml
+++ b/dev.yml
@@ -14,9 +14,7 @@ steps:
         extensions:
           - swoole
           - ffi
-        sources:
-          xz: https://github.com/tukaani-project/xz/releases/download/v5.6.2/xz-5.6.2.tar.gz
-          swoole: https://github.com/swoole/swoole-src/releases/download/v5.1.3/swoole-5.1.3.tgz
+        sources: {}
   - script:
       desc: Install composer dependencies
       run: composer install
@@ -53,9 +51,6 @@ commands:
   coverage:
     desc: Run PHP tests
     run: php -d zend_extension=$PWD/dist/xdebug.so vendor/bin/pest --coverage
-  pro:
-    desc: PRO
-    run: echo "@1dada"
 
 serve:
   write: while true; do echo "Hello, DEV! The time is $(date)" >> output.txt; sleep 1; done
