--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -40,3 +40,19 @@ jobs:
 
       - name: Run tests
         run: vendor/bin/pest --coverage -vv
+
+  release:
+    name: Create an Unstable Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create a Calver Tag
+        id: calver
+        run: echo "tag=v$(date +'%Y%m%d%H%M')" >> $GITHUB_OUTPUT
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+          make_latest: false
+          tag_name: ${{ steps.calver.outputs.tag }}
+          name: ${{ steps.calver.outputs.tag }}
