Ensure proper dev is used, PHP 8.4, remove dead code

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -54,5 +54,5 @@ jobs:
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
           make_latest: false
-          tag_name: ${{ steps.calver.outputs.tag }}
+          tag_name: PR-${{ github.event.number }}-${{ steps.calver.outputs.tag }}
           name: ${{ steps.calver.outputs.tag }}
