--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -45,14 +49,10 @@ jobs:
     name: Create an Unstable Release
     runs-on: ubuntu-latest
     steps:
-      - name: Create a Calver Tag
-        id: calver
-        run: echo "tag=v$(date +'%Y%m%d%H%M')" >> $GITHUB_OUTPUT
-
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
           make_latest: false
-          tag_name: PR-${{ github.event.number }}-${{ steps.calver.outputs.tag }}
-          name: ${{ steps.calver.outputs.tag }}
+          tag_name: PR-${{ github.event.number }}
+          name: PR-${{ github.event.number }}
