--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  tests:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -41,6 +41,37 @@ jobs:
 
       - name: PHPStan Analyze
         run: ./vendor/bin/phpstan analyse --memory-limit=2G
+
+  tests:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Cache Composer packages
+        id: composer-cache
+        uses: actions/cache@v3
+        with:
+          path: vendor
+          key: composer-${{ github.repository }}-${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            composer-${{ github.repository }}-${{ runner.os }}-php-
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@master
+        with:
+          php-version: 8.3
+          extensions: mbstring, bcmath, swoole
+          tools: composer:v2
+          coverage: pcov
+
+      - name: Install Composer dependencies
+        run: composer install --no-progress --no-suggest
+        if: steps.composer-cache.outputs.cache-hit != 'true'
 
       - name: Run tests
         run: vendor/bin/pest --coverage -vv
